--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.5",
+  "version": "0.0.6",
   "author": "Regula Forensics, Inc.",
   "name": "@regulaforensics/document-reader-recipes",
   "description": "Document Reader Recipes",
@@ -8,7 +8,6 @@
     "build": "vite build"
   },
   "dependencies": {
-    "@regulaforensics/document-reader-typings": "^0.0.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.2.1",
@@ -22,6 +21,9 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-dts": "^3.7.0"
+  },
+  "peerDependencies": {
+    "@regulaforensics/document-reader-typings": "^0.0.4"
   },
   "source": "src/index.ts",
   "main": "dist/index.cjs",
