--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "version": "0.0.6",
+  "version": "0.0.7",
   "author": "Regula Forensics, Inc.",
   "name": "@regulaforensics/document-reader-recipes",
   "description": "Document Reader Recipes",
   "license": "MIT",
   "scripts": {
-    "build": "vite build"
+    "build": "vite build",
+    "test": "jest"
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "reflect-metadata": "^0.2.1",
-    "thenby": "^1.3.4"
+    "thenby": "^1.3.4",
+    "@regulaforensics/document-reader-typings": "^0.0.5"
   },
   "devDependencies": {
     "@types/jest": "^29.5.11",
@@ -21,9 +23,6 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vite-plugin-dts": "^3.7.0"
-  },
-  "peerDependencies": {
-    "@regulaforensics/document-reader-typings": "^0.0.4"
   },
   "source": "src/index.ts",
   "main": "dist/index.cjs",
