--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.23",
+  "version": "0.0.24",
   "author": "Regula Forensics, Inc.",
   "name": "@regulaforensics/document-reader-recipes",
   "description": "Document Reader Recipes",
@@ -8,7 +8,8 @@
     "build": "vite build",
     "test": "jest"
   },
-  "dependencies": {
+  "peerDependencies": {
+    "@regulaforensics/document-reader-typings": ">=0.0.16",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.1",
@@ -21,11 +22,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3",
-    "vite": "^5.1.3",
-    "vite-plugin-dts": "^3.7.2"
-  },
-  "peerDependencies": {
-    "@regulaforensics/document-reader-typings": ">=0.0.10"
+    "vite": "^5.1.4",
+    "vite-plugin-dts": "^3.7.3"
   },
   "source": "src/index.ts",
   "main": "dist/index.cjs",
