--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.79",
+  "version": "0.0.80",
   "author": "Regula Forensics, Inc.",
   "name": "@regulaforensics/document-reader-recipes",
   "description": "Document Reader Recipes",
@@ -18,13 +18,13 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.12",
+    "@types/node": "^22.5.0",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.3",
+    "ts-jest": "^29.2.4",
     "typescript": "^5.5.4",
-    "vite": "^5.3.4",
-    "vite-plugin-dts": "^4.0.0-beta.2"
+    "vite": "^5.4.2",
+    "vite-plugin-dts": "^4.0.3"
   },
   "source": "src/index.ts",
   "main": "dist/index.cjs",
